--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,13 @@
 # Run with:
 # docker-compose up
 
-elk:
-  image: busbyjon/elk-docker:arm 
-  ports:
-    - "5601:5601"
-    - "9200:9200"
-    - "5044:5044"
+version: "3"
+
+services:
+
+  elk:
+    image: busbyjon/elk-docker:arm 
+    ports:
+      - "5601:5601"
+      - "9200:9200"
+      - "5044:5044"
